basic_services/jobs/inner_jobs/camera/prod/01-camera-service.prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: "camera"
  namespace: "leaf-image-management-system"
spec:
  selector:
    name: "camera"
  type: NodePort
  ports:
    - port: 5050
      targetPort: 5050
      nodePort: 30550
      protocol: TCP
      name: job-port
