basic_services/jobs/inner_jobs/camera/prod/02-camera-ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camera-ingress
  namespace: leaf-image-management-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camera
                port:
                  number: 5050
